# ObsWindowSwitcher

./: .gitignore  CMakeLists.txt  default_bus_layout.tres  project.godot  vcpkg.json  window.gdextension
addons/obs-websocket-gd/: obs_websocket.gd
resources/: default_bus_layout.tres
resources/app/: icon.svg.import
scenes/: main_control.tscn
scenes/ui/: controls.tscn  scene_automatics.tscn  scene_automatics_regex_item.tscn
scripts/common/: WindowHelperScript.gd  persistent_properties.gd
scripts/scene_control/: scene_automatics_global.gd
scripts/ui/: controls.gd  full_screen_content.gd  main_control.gd  scene_automatics.gd  scene_automatics_regex_item.gd
src/window/: CMakeLists.txt  register_types.cpp  register_types.hpp  window_helper.cpp  window_helper.hpp
